--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@ img.logo {
   }
 
   .logo {
-    /* columna fija a la izquierda */
     flex: 0 0 300px;
     max-width: 300px;
     height: auto;
-
-    /* comportamiento pedido */
     margin-top: 90px;             
     position: sticky;
     top: 20px;                     
@@ -53,19 +50,19 @@ img.logo {
     <link rel="stylesheet" href="styles.css?v=2">
 
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
-    <!-- Favicon estándar -->
+
 <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
 
-<!-- Favicons en diferentes tamaños para mejor compatibilidad -->
+
 <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="192x192" href="favicon_io/android-chrome-192x192.png">
 <link rel="icon" type="image/png" sizes="512x512" href="favicon_io/android-chrome-512x512.png">
 
-<!-- Apple Touch Icon (para iOS y dispositivos Apple) -->
+
 <link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
 
-<!-- Web Manifest (para Progressive Web Apps) -->
+
 <link rel="manifest" href="favicon_io/site.webmanifest">
 
     <meta charset="UTF-8">
@@ -81,7 +78,7 @@ img.logo {
 <meta name="robots" content="index, follow">
 
 
-    <!-- Open Graph (para compartir en redes sociales) -->
+   
     <meta property="og:title" content="GastroSAT | Asistencia Técnica y Equipamiento para Hostelería">
     <meta property="og:description" content="Especialistas en reparación y venta de maquinaria para hostelería en Mallorca.">
     <meta property="og:image" content="https://gastrosat.com/logov5.jpg">
@@ -92,10 +89,10 @@ img.logo {
 <body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
 
     <div class="wrapper" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
-        <!-- Logo -->
+
         <img src="logov5.svg" alt="GastroSat Logo" class="logo">
 
-        <!-- Caja de contenido sin borde -->
+     
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>🚀 Bienvenido/a a Gastrosat</h2>
             <p><strong>Servicio de Asistencia Técnica & Equipamiento Profesional para la Hostelería en Mallorca.</strong></p>
@@ -140,6 +137,9 @@ a[href*="gastrosat.shop"]:hover {
 <li>📖 <a href="https://www.dropbox.com/scl/fi/49o0ieeaelw6g1q737dyy/Edenox_cat-logo_general.pdf?rlkey=3wef71ugq135elodg29shvykc&st=n69v2yaz&raw=1" target="_blank">Ver Catálogo</a> EDENOX | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/49o0ieeaelw6g1q737dyy/Edenox_cat-logo_general.pdf?rlkey=3wef71ugq135elodg29shvykc&st=n69v2yaz&dl=1">Descargar PDF</a></li>
 
+<li>📖 <a https://www.dropbox.com/scl/fi/4kwij0y6he2bzpd53hg5w/Catalogo-General-MERAL-2025.pdf?rlkey=s9g7iyp37jsg4cb1r51uyc3nf&st=xsr10b8r&raw=1" target="_blank">Ver Catálogo</a> MERAL | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/4kwij0y6he2bzpd53hg5w/Catalogo-General-MERAL-2025.pdf?rlkey=s9g7iyp37jsg4cb1r51uyc3nf&st=xsr10b8r&dl=1">Descargar PDF</a></li>
+                
 <li>📖 <a href="https://www.dropbox.com/scl/fi/l4uce4218a1qj7rl3n2kz/Miele_cat-logo_lavavajillas_2023.pdf?rlkey=z7c8da3l9hjt5mlin2ld1klvj&st=nynbnyao&raw=1" target="_blank">Ver Catálogo</a> MIELE (lavavajillas Profesionales) | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/l4uce4218a1qj7rl3n2kz/Miele_cat-logo_lavavajillas_2023.pdf?rlkey=z7c8da3l9hjt5mlin2ld1klvj&st=nynbnyao&dl=1">Descargar PDF</a></li>
 
