Add renting and financing information to index.html
Added renting and financing section with options.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,21 @@ a[href*="gastrosat.shop"]:hover {
             </ul>
             
             <br>
+<hr>
+
+<h3>💶 Renting y financiación</h3>
+<p>
+Renovar el equipamiento de tu negocio sin vaciar la caja es posible. 
+Trabajamos con distintas opciones de renting, leasing y financiación para que 
+puedas estrenar maquinaria profesional pagando en las cuotas que se adapten a ti
+y sin sorpresas.
+</p>
+<p>
+  <a href="/financiacion.html" 
+     style="display: inline-block; margin-top: 10px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
+    Ver opciones de financiación →
+  </a>
+</p>   
             <hr>
             <h3>⚙️ Servicio de Asistencia Técnica</h3>
             <p>Brindamos soluciones integrales para entornos profesionales de hostelería. Si ocurre tras la barra, en la cocina, en una cámara o bajo el fregadero, podemos solucionarlo.  
