--- a/financiacion.html
+++ b/financiacion.html
@@ -1,1 +1,232 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <style>
+img.logo {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    display: flex;
+    flex-wrap: nowrap !important;     
+    align-items: flex-start !important;
+    justify-content: center;
+    gap: 50px;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  .logo {
+    flex: 0 0 300px;
+    max-width: 300px;
+    height: auto;
+    margin-top: 90px;             
+    position: sticky;
+    top: 20px;                     
+    z-index: 1;                     
+  }
+
+  .content {
+    flex: 1 1 0;
+    min-width: 0;
+    max-width: 650px;
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1180px) {
+  .logo {
+    position: sticky !important;
+    top: 20px !important;
+  }
+}
+</style>
+
+    <link rel="stylesheet" href="styles.css?v=2">
+    <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
+
+    <!-- Favicon estándar -->
+    <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
+
+    <!-- Favicons en diferentes tamaños para mejor compatibilidad -->
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon_io/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="favicon_io/android-chrome-512x512.png">
+
+    <!-- Apple Touch Icon (para iOS y dispositivos Apple) -->
+    <link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
+
+    <!-- Web Manifest (para Progressive Web Apps) -->
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <title>Gastrosat | Renting y financiación</title>
+    <meta name="description" content="Opciones de renting, leasing y financiación para maquinaria de hostelería en Mallorca. Renueva tu cocina, barra o lavandería sin grandes desembolsos iniciales.">
+</head>
+<body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; text-align: center;">
+
+    <div class="wrapper" style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 20px; max-width: 90%; margin: auto;">
+        
+        <img src="logov5.svg" alt="GastroSat Logo" class="logo">
+
+        <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
+            <h2>💶 Renting, leasing y financiación para tu maquinaria</h2>
+            <p>
+                Montar o renovar una cocina profesional, una barra o una lavandería implica invertir en equipos
+                que no son precisamente baratos. La buena noticia: <strong>no hace falta pagarlo todo de golpe</strong>.
+            </p>
+            <p>
+                En Gastrosat trabajamos con distintas fórmulas de <strong>renting, leasing y financiación clásica</strong>
+                para que puedas estrenar maquinaria profesional sin que tu tesorería se desmaye el primer día.
+                No somos un banco, pero nos llevamos razonablemente bien con ellos.
+            </p>
+
+            <hr>
+
+            <h3>🟢 Renting: pagar por usar, no por tener</h3>
+            <p>
+                El <strong>renting</strong> es, básicamente, un alquiler a medio o largo plazo.
+                Tú utilizas la maquinaria, pagas una cuota fija cada mes y te olvidas de gran parte de lo demás.
+            </p>
+            <p>Suele encajar bien cuando:</p>
+            <ul>
+                <li>Quieres <strong>estrenar equipos</strong> sin una gran inversión inicial.</li>
+                <li>Prefieres tener <strong>cuotas fáciles de prever</strong>, sin sorpresas extrañas.</li>
+                <li>Te interesa que una parte de los servicios relacionados estén integrados en la cuota.</li>
+            </ul>
+            <p>
+                Al finalizar el contrato, normalmente puedes <strong>renovar el equipo</strong>,
+                <strong>prolongar el renting</strong> o estudiar otras opciones.
+                Lo bueno: la maquinaria no se queda “vieja” en tu cocina durante 20 años solo porque un día la compraste.
+            </p>
+
+            <hr>
+
+            <h3>🔵 Leasing: arrendamiento con opción de compra</h3>
+            <p>
+                El <strong>leasing</strong> es un arrendamiento financiero. Traducido:
+                vas pagando cuotas por el equipo y, al final del plazo,
+                <strong>puedes quedártelo pagando un valor residual</strong>.
+            </p>
+            <p>Es una buena idea cuando:</p>
+            <ul>
+                <li>Tienes claro que <strong>quieres quedarte la máquina</strong> al final.</li>
+                <li>Prefieres <strong>repartir el coste en el tiempo</strong> y reservar liquidez para otras cosas.</li>
+                <li>Buscas una opción con <strong>ventajas fiscales</strong>, según tu asesoría.</li>
+            </ul>
+            <p>
+                Nosotros te ayudamos con la parte técnica (qué máquina tiene sentido) y con los números básicos.
+                La parte seria de contratos, intereses y letras pequeñas se revisa siempre con la entidad financiera
+                y tu asesor. <strong>No firmamos nada “porque sí”.</strong>
+            </p>
+
+            <hr>
+
+            <h3>🟠 Financiación clásica: pago a plazos sin complicarse la vida</h3>
+            <p>
+                Si lo tuyo no son los anglicismos, siempre queda la opción de
+                <strong>financiar la compra</strong> de forma más tradicional:
+                precio total dividido en cuotas durante un tiempo pactado.
+            </p>
+            <p>En este caso:</p>
+            <ul>
+                <li>El equipo suele ser <strong>tuyo desde el principio</strong> o desde el final del pago, según el acuerdo.</li>
+                <li>Las cuotas y el plazo se adaptan al <strong>volumen de la inversión</strong> y a tu negocio.</li>
+                <li>La gestión la hacemos nosotros junto con la financiera o el banco con el que trabajemos en cada caso.</li>
+            </ul>
+            <p>
+                Nuestro objetivo no es colocarte la cuota más alta posible, sino algo que puedas pagar
+                sin estar pensando en la máquina cada vez que abras la caja.
+            </p>
+
+            <hr>
+
+            <h3>⚖️ ¿Qué opción te conviene más?</h3>
+            <p>
+                No hay una fórmula mágica que sirva para todos. Depende de cosas tan emocionantes como:
+            </p>
+            <ul>
+                <li>Si estás <strong>montando un negocio nuevo</strong> o renovando uno que ya funciona.</li>
+                <li>Si la temporada es muy marcada (verano, hotel, chiringuito…) o trabajas todo el año.</li>
+                <li>De cuánto quieres <strong>comprometerte a largo plazo</strong> con ese equipo concreto.</li>
+                <li>De tu situación financiera y de lo que opine tu asesor (que para algo le pagas).</li>
+            </ul>
+            <p>
+                Lo que sí podemos hacer es ayudarte a <strong>poner números sobre la mesa</strong>:
+                coste de la máquina, cuotas aproximadas y distintas opciones según el plazo.
+                A partir de ahí, decides tú.
+            </p>
+
+            <hr>
+
+            <h3>📞 Lo vemos con calma</h3>
+            <p>
+                Si estás pensando en renovar tu cocina, tu barra, tu cámara o tu lavandería
+                y quieres ver qué opciones de renting, leasing o financiación hay para tu caso,
+                hablamos y lo estudiamos sin compromiso (ni teatrillos comerciales).
+            </p>
+            <p>
+                Puedes llamarnos en horario comercial al
+                <a href="tel:+34871252049">+34 871 252 049</a> o enviarnos un
+                <a href="https://wa.me/34871252049" target="_blank">WhatsApp</a>.
+            </p>
+            <p>
+                Si lo prefieres, utiliza el <a href="/contacto">formulario de contacto</a>
+                indicando qué tipo de proyecto tienes entre manos y te respondemos con opciones
+                realistas, números claros y sin prometer milagros.
+            </p>
+
+            <a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
+                ← Volver al inicio
+            </a>
+        </div>
+    </div>
+
+    <nav>
+    </nav>
+
+    <footer style="text-align: center; padding: 20px; margin-top: 40px; background-color: #f8f8f8; font-size: 14px; color: #333;">
+        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px; margin-top: 15px;">
+            <a href="https://www.infrico.com/" target="_blank">
+                <img src="logos_proveedores/infrico.png" alt="Logo Infrico" style="height: 50px;" loading="lazy">
+            </a>
+            <a href="https://www.miele.com/" target="_blank">
+                <img src="logos_proveedores/miele.png" alt="Logo Miele" style="height: 50px;" loading="lazy">
+            </a>
+            <a href="https://www.fricosmos.com/" target="_blank">
+                <img src="logos_proveedores/fricosmos.png" alt="Logo Fricosmos" style="height: 50px;" loading="lazy">
+            </a>
+            <a href="https://www.impafri.com/" target="_blank">
+                <img src="logos_proveedores/impafri.png" alt="Logo Impafri" style="height: 37.5px; margin-top: 6px;" loading="lazy">
+            </a>
+            <a href="https://www.intarcon.com/" target="_blank">
+                <img src="logos_proveedores/intarcon.png" alt="Logo Intarcon" style="height: 30px; margin-top: 10px;" loading="lazy">
+            </a>
+            <a href="https://www.tecnoinox.it/" target="_blank">
+                <img src="logos_proveedores/tecnoinox.png" alt="Logo Tecnoinox" style="height: 50px;" loading="lazy">
+            </a>     
+        </div>
+        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 10px;">
+            <a href="https://www.eurofours.com/es" target="_blank">
+                <img src="logos_proveedores/eurofours.png" alt="Logo Eurofours" style="height: 50px;" loading="lazy">
+            </a> 
+            <a href="https://www.edenox.es/" target="_blank">
+                <img src="logos_proveedores/edenox.webp" alt="Logo Edenox" style="height: 50px;" loading="lazy">
+            </a>  
+        </div>
+        <br>
+        <p><a href="/privacidad.html">Política de Privacidad y Cookies</a></p>
+        <p>©2025 GastroSat. Algunos derechos reservados.</p>
+        <p>Desarrollado con 💚 por <strong>Gastrosat</strong></p>
+    </footer>
+
+</body>
+</html>
