--- a/index.html
+++ b/index.html
@@ -171,10 +171,9 @@ a[href*="gastrosat.shop"]:hover {
 
 <h3>💶 Renting y financiación</h3>
 <p>
-Renovar el equipamiento de tu negocio sin vaciar la caja es posible. 
-Trabajamos con distintas opciones de renting, leasing y financiación para que 
-puedas estrenar maquinaria profesional pagando en las cuotas que se adapten a ti
-y sin sorpresas.
+Renovar el equipamiento de tu negocio sin descapitalizarte es posible. 
+Trabajamos con distintas opciones de <strong>renting, leasing y financiación</strong> para que 
+puedas estrenar maquinaria profesional pagando en cuotas que se adapten a ti y sin sorpresas.
 </p>
 <p>
   <a href="/financiacion.html" 
