--- a/financiacion.html
+++ b/financiacion.html
@@ -80,52 +80,54 @@ img.logo {
         <div class="content" style="width: 100%; max-width: 650px; padding: 20px; text-align: left;">
             <h2>💶 Renting, leasing y financiación para tu maquinaria</h2>
             <p>
-                Montar o renovar una cocina profesional, una barra o una lavandería implica invertir en equipos
-                que no son precisamente baratos. La buena noticia: <strong>no hace falta pagarlo todo de golpe</strong>.
+                Montar o renovar una cocina profesional implica invertir en equipos
+                que no son precisamente baratos. La buena noticia: no hace falta pagarlo todo de golpe.
             </p>
             <p>
-                En Gastrosat trabajamos con distintas fórmulas de <strong>renting, leasing y financiación clásica</strong>
-                para que puedas estrenar maquinaria profesional sin que tu tesorería se desmaye el primer día.
-                No somos un banco, pero nos llevamos razonablemente bien con ellos.
+                En Gastrosat ofrecemos <strong>renting, leasing y financiación</strong>
+                para que puedas estrenar maquinaria profesional sin tener que realizar una gran inversión.
+                No somos un banco, pero nos llevamos razonablemente bien con ellos (mas de 30 entidades) y mejor aun con la financiera que se encargara de gestionarlo.
             </p>
 
             <hr>
 
             <h3>🟢 Renting: pagar por usar, no por tener</h3>
             <p>
-                El <strong>renting</strong> es, básicamente, un alquiler a medio o largo plazo.
+                El renting es, básicamente, un alquiler a medio o largo plazo.
                 Tú utilizas la maquinaria, pagas una cuota fija cada mes y te olvidas de gran parte de lo demás.
             </p>
             <p>Suele encajar bien cuando:</p>
             <ul>
                 <li>Quieres <strong>estrenar equipos</strong> sin una gran inversión inicial.</li>
-                <li>Prefieres tener <strong>cuotas fáciles de prever</strong>, sin sorpresas extrañas.</li>
-                <li>Te interesa que una parte de los servicios relacionados estén integrados en la cuota.</li>
+                <li>Prefieres tener <strong>cuotas fijas fáciles de prever</strong>, sin sorpresas.</li>
+                <li>Te interesa que una parte de los servicios relacionados (como el mantenimiento periodico) estén integrados en la cuota.</li>
             </ul>
             <p>
-                Al finalizar el contrato, normalmente puedes <strong>renovar el equipo</strong>,
-                <strong>prolongar el renting</strong> o estudiar otras opciones.
-                Lo bueno: la maquinaria no se queda “vieja” en tu cocina durante 20 años solo porque un día la compraste.
+                Al finalizar el contrato, normalmente puedes renovar el equipo,
+                prolongar el renting o estudiar otras opciones.
+                Lo bueno: la maquinaria no se queda “envejecida” en tu cocina durante 20 años solo porque un día la compraste.
             </p>
 
             <hr>
 
             <h3>🔵 Leasing: arrendamiento con opción de compra</h3>
             <p>
-                El <strong>leasing</strong> es un arrendamiento financiero. Traducido:
-                vas pagando cuotas por el equipo y, al final del plazo,
-                <strong>puedes quedártelo pagando un valor residual</strong>.
+                El leasing es un arrendamiento financiero.
+                Vas pagando cuotas por el equipo y, al final del plazo,
+                puedes quedártelo pagando un valor residual, o renovarlo con un nuevo contrato.
             </p>
             <p>Es una buena idea cuando:</p>
             <ul>
-                <li>Tienes claro que <strong>quieres quedarte la máquina</strong> al final.</li>
+                <li>Tienes claro que quieres quedarte la máquina al final.</li>
                 <li>Prefieres <strong>repartir el coste en el tiempo</strong> y reservar liquidez para otras cosas.</li>
-                <li>Buscas una opción con <strong>ventajas fiscales</strong>, según tu asesoría.</li>
+                <li>Buscas una opción con mayores ventajas fiscales.</li>
             </ul>
             <p>
-                Nosotros te ayudamos con la parte técnica (qué máquina tiene sentido) y con los números básicos.
-                La parte seria de contratos, intereses y letras pequeñas se revisa siempre con la entidad financiera
-                y tu asesor. <strong>No firmamos nada “porque sí”.</strong>
+                Nosotros te ayudamos no solo con la parte técnica, sino que te acompañamos con todo el proceso.
+                Preparamos una primera oferta con la maquinaria que te interesa, te la enviamos a ti y a nuestro gestor, este se pone en contacto contigo y te solicita toda la documentación
+                necesaria para realizar un estudio y una simulacion con las mejores condiciones posibles. 
+                La parte seria de contratos, intereses y letras pequeñas se revisa siempre con la entidad financiera y tu asesor.
+                Y eso es todo, una vez firmada la operación se envian los equipos sin esperas.
             </p>
 
             <hr>
@@ -138,41 +140,32 @@ img.logo {
             </p>
             <p>En este caso:</p>
             <ul>
-                <li>El equipo suele ser <strong>tuyo desde el principio</strong> o desde el final del pago, según el acuerdo.</li>
-                <li>Las cuotas y el plazo se adaptan al <strong>volumen de la inversión</strong> y a tu negocio.</li>
-                <li>La gestión la hacemos nosotros junto con la financiera o el banco con el que trabajemos en cada caso.</li>
+                <li>El equipo es tuyo desde el principio o desde el final del pago, según el acuerdo.</li>
+                <li>Las cuotas y el plazo se adaptan al volumen de la inversión y a tu negocio.</li>
+                <li>La gestión también la hacemos nosotros junto con la financiera.</li>
             </ul>
-            <p>
-                Nuestro objetivo no es colocarte la cuota más alta posible, sino algo que puedas pagar
-                sin estar pensando en la máquina cada vez que abras la caja.
-            </p>
 
             <hr>
 
             <h3>⚖️ ¿Qué opción te conviene más?</h3>
             <p>
-                No hay una fórmula mágica que sirva para todos. Depende de cosas tan emocionantes como:
+                No hay una fórmula mágica que sirva para todos. Depende de varias cosas como:
             </p>
             <ul>
-                <li>Si estás <strong>montando un negocio nuevo</strong> o renovando uno que ya funciona.</li>
+                <li>Si estás montando un negocio nuevo o renovando uno que ya funciona.</li>
                 <li>Si la temporada es muy marcada (verano, hotel, chiringuito…) o trabajas todo el año.</li>
-                <li>De cuánto quieres <strong>comprometerte a largo plazo</strong> con ese equipo concreto.</li>
-                <li>De tu situación financiera y de lo que opine tu asesor (que para algo le pagas).</li>
+                <li>De cuánto quieres comprometerte a largo plazo con ese equipo concreto.</li>
+                <li>De tu situación financiera y de lo que opine tu asesor.</li>
             </ul>
             <p>
                 Lo que sí podemos hacer es ayudarte a <strong>poner números sobre la mesa</strong>:
                 coste de la máquina, cuotas aproximadas y distintas opciones según el plazo.
-                A partir de ahí, decides tú.
+                A partir de ahí, tú decides.
             </p>
 
             <hr>
 
-            <h3>📞 Lo vemos con calma</h3>
-            <p>
-                Si estás pensando en renovar tu cocina, tu barra, tu cámara o tu lavandería
-                y quieres ver qué opciones de renting, leasing o financiación hay para tu caso,
-                hablamos y lo estudiamos sin compromiso (ni teatrillos comerciales).
-            </p>
+            <h3>📞 Lo vemos con calma?</h3>
             <p>
                 Puedes llamarnos en horario comercial al
                 <a href="tel:+34871252049">+34 871 252 049</a> o enviarnos un
@@ -181,7 +174,7 @@ img.logo {
             <p>
                 Si lo prefieres, utiliza el <a href="/contacto">formulario de contacto</a>
                 indicando qué tipo de proyecto tienes entre manos y te respondemos con opciones
-                realistas, números claros y sin prometer milagros.
+                realistas y números claros.
             </p>
 
             <a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
