Fix typos and accent marks in financiacion.html

--- a/financiacion.html
+++ b/financiacion.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -86,7 +85,7 @@ img.logo {
             <p>
                 En Gastrosat ofrecemos <strong>renting, leasing y financiación</strong>
                 para que puedas estrenar maquinaria profesional sin tener que realizar una gran inversión.
-                No somos un banco, pero nos llevamos razonablemente bien con ellos (mas de 30 entidades) y mejor aun con la financiera que se encargara de gestionarlo.
+                No somos un banco, pero nos llevamos razonablemente bien con ellos (más de 30 entidades) y mejor aún con la financiera que se encargará de gestionarlo.
             </p>
 
             <hr>
@@ -100,7 +99,7 @@ img.logo {
             <ul>
                 <li>Quieres <strong>estrenar equipos</strong> sin una gran inversión inicial.</li>
                 <li>Prefieres tener <strong>cuotas fijas fáciles de prever</strong>, sin sorpresas.</li>
-                <li>Te interesa que una parte de los servicios relacionados (como el mantenimiento periodico) estén integrados en la cuota.</li>
+                <li>Te interesa que una parte de los servicios relacionados (como el mantenimiento periódico) estén integrados en la cuota.</li>
             </ul>
             <p>
                 Al finalizar el contrato, normalmente puedes renovar el equipo,
@@ -125,9 +124,9 @@ img.logo {
             <p>
                 Nosotros te ayudamos no solo con la parte técnica, sino que te acompañamos con todo el proceso.
                 Preparamos una primera oferta con la maquinaria que te interesa, te la enviamos a ti y a nuestro gestor, este se pone en contacto contigo y te solicita toda la documentación
-                necesaria para realizar un estudio y una simulacion con las mejores condiciones posibles. 
+                necesaria para realizar un estudio y una simulación con las mejores condiciones posibles. 
                 La parte seria de contratos, intereses y letras pequeñas se revisa siempre con la entidad financiera y tu asesor.
-                Y eso es todo, una vez firmada la operación se envian los equipos sin esperas.
+                Y eso es todo, una vez firmada la operación se envían los equipos sin esperas.
             </p>
 
             <hr>
@@ -149,7 +148,7 @@ img.logo {
 
             <h3>⚖️ ¿Qué opción te conviene más?</h3>
             <p>
-                No hay una fórmula mágica que sirva para todos. Depende de varias cosas como:
+                No hay una fórmula mágica que sirva para todos. Depende de varias cosas, como:
             </p>
             <ul>
                 <li>Si estás montando un negocio nuevo o renovando uno que ya funciona.</li>
@@ -165,7 +164,7 @@ img.logo {
 
             <hr>
 
-            <h3>📞 Lo vemos con calma?</h3>
+            <h3>📞 ¿Lo vemos con calma?</h3>
             <p>
                 Puedes llamarnos en horario comercial al
                 <a href="tel:+34871252049">+34 871 252 049</a> o enviarnos un
