--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ a[href*="gastrosat.shop"]:hover {
 <li>📖 <a href="https://www.dropbox.com/scl/fi/7ktpu8ea8se98r1fah31j/Miele_cat-logo_lavanderia.pdf?rlkey=i6fyzo9jm5wap0xo6s9xgsu9q&st=apzytixj&raw=1" target="_blank">Ver Catálogo</a> MIELE (lavandería) | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/7ktpu8ea8se98r1fah31j/Miele_cat-logo_lavanderia.pdf?rlkey=i6fyzo9jm5wap0xo6s9xgsu9q&st=apzytixj&dl=1">Descargar PDF</a></li>
 
-<li>📖 <a href="https://www.dropbox.com/scl/fi/k8eblivdg9qpihtqwu39n/Eurofours_cat-logo_2022.pdf?rlkey=86teqnfccyg0x5m0fpkabdtsu&st=gcpr8ll7&raw=1" target="_blank">Ver Catálogo</a> EUROFOURS (Panadería) | 
-⬇️ <a href="https://www.dropbox.com/scl/fi/k8eblivdg9qpihtqwu39n/Eurofours_cat-logo_2022.pdf?rlkey=86teqnfccyg0x5m0fpkabdtsu&st=gcpr8ll7&dl=1">Descargar PDF</a></li>
+<li>📖 <a href="https://www.dropbox.com/scl/fi/76v391wz44lrgd9jmx6uc/Eurofours-Julio-2025.pdf?rlkey=g02o77rrsoer5b9uj66w7olrh&st=tm7m5nhn&raw=1" target="_blank">Ver Catálogo</a> EUROFOURS (Panadería) | 
+⬇️ <a href="https://www.dropbox.com/scl/fi/76v391wz44lrgd9jmx6uc/Eurofours-Julio-2025.pdf?rlkey=g02o77rrsoer5b9uj66w7olrh&st=tm7m5nhn&dl=1">Descargar PDF</a></li>
 
 <li>📖 <a href="https://www.dropbox.com/scl/fi/j3bay3efepr03efv7qm2i/Impafri_cat-logo_2025.pdf?rlkey=uimk8u4xc9810yendt7njnnxm&st=uf18opdy&raw=1" target="_blank">Ver Catálogo</a> IMPAFRI (cámaras) | 
 ⬇️ <a href="https://www.dropbox.com/scl/fi/j3bay3efepr03efv7qm2i/Impafri_cat-logo_2025.pdf?rlkey=uimk8u4xc9810yendt7njnnxm&st=uf18opdy&dl=1">Descargar PDF</a></li>
