--- a/privacidad.html
+++ b/privacidad.html
@@ -87,6 +87,9 @@ img.logo {
                 <p>En GastroSat no usamos cookies porque, sinceramente, no las necesitamos. No nos interesa rastrear qué haces en nuestra web, ni qué páginas visitas ni cuántas veces vuelves. Si nos contactas, 
                 será porque quieres, y si nos recuerdas, mejor aún. Preferimos enfocarnos en ofrecerte un buen servicio en lugar de recopilar datos innecesarios. Así de simple.</p>
 
+<p style="font-size: 12px; color: #777; margin-top: 30px;">
+                Nota: el contenido íntegro de esta sección ha sido redactado por ChatGPT.
+            </p>
             
 <a href="/" style="display: inline-block; margin-top: 20px; font-size: 16px; text-decoration: none; color: #007bff; font-weight: bold;">
     ← Volver al inicio
